name:                matasano-cryptopals
version:             0.1.0.0
synopsis:            matasano-cryptopals Project...
homepage:            http://github.com/sordina/matasano-cryptopals
license:             MIT
license-file:        LICENSE
author:              Lyndon Maydwell
maintainer:          maydwell@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable matasano-cryptopals
  main-is:             Main.hs
  build-depends:       base -any, base64-bytestring, digits, safe, split, cryptocipher, lens,
                       containers, bytestring, cipher-aes, array
  Other-Modules:       Set1.Challenge_1, Set1.Challenge_2, Set1.Challenge_3, Set1.Challenge_4,
                       Set1.Challenge_5, Set1.Challenge_6, Set1.Challenge_7, Set1.Challenge_8
  hs-source-dirs:      src
  default-language:    Haskell2010
